...
     
        if self.isLastQuestion() {
            statisticService?.allTimeQuestions += questionsAmount
            statisticService?.gamesCount += 1
            let text =  "Ваш результат: \(correctAnswers) из 10"
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз")
            movieQuizViewController?.show(quiz: viewModel)
            
        } else {
            self.switchToNextQuestion()
...
